--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/RobBurson/nosql-social-network-challenge/issues"
   },
-  "homepage": "https://github.com/RobBurson/nosql-social-network-challenge#readme"
+  "homepage": "https://github.com/RobBurson/nosql-social-network-challenge#readme",
+  "dependencies": {
+    "express": "^4.17.2",
+    "mongoose": "^6.1.8"
+  }
 }
