--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/RobBurson/nosql-social-network-challenge#readme",
   "dependencies": {
     "express": "^4.17.2",
+    "mongodb": "^4.3.1",
     "mongoose": "^6.1.8"
   }
 }
